# SNP

./: CMakeLists.txt  Playground.c  README.md  main.c
A01/: Aufgabe1.c  Aufgabe1.h  Aufgabe11.h
A02/: Aufgabe1.c  Aufgabe1.h  Aufgabe21.c  Aufgabe21.h  Aufgabe2_32.c  Aufgabe2_32.h
